--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,6 @@ spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
 #logging hikari connection pool
-logging.level.com.zaxxer=DEBUG
+#logging.level.com.zaxxer=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=debug
