adding spring cloud stream

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,14 @@ spring.h2.console.settings.web-allow-others=false
 #logging.level.com.zaxxer=DEBUG
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=debug
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+
+spring.cloud.function.definition=courseEvent
+spring.cloud.stream.bindings.courseEvent-in-0.destination=course
+spring.cloud.stream.bindings.courseEvent-in-0.group=event
+
