--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -23,13 +25,13 @@ spring.h2.console.settings.web-allow-others=false
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=debug
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-spring.rabbitmq.virtual-host=/
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+#spring.rabbitmq.virtual-host=/
 
-spring.cloud.function.definition=courseEvent
-spring.cloud.stream.bindings.courseEvent-in-0.destination=course
-spring.cloud.stream.bindings.courseEvent-in-0.group=event
+#spring.cloud.function.definition=courseEvent
+#spring.cloud.stream.bindings.courseEvent-in-0.destination=course
+#spring.cloud.stream.bindings.courseEvent-in-0.group=event
 
